tests/baselines/reference/unusedMultipleParameters1InFunctionDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts(1,18): error TS6133: 'person' is declared but never used.
tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts(2,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameters1InFunctionDeclaration.ts (2 errors) ====
    function greeter(person: string, person2: string) {
                     ~~~~~~
!!! error TS6133: 'person' is declared but never used.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
        person2 = "dummy value";
    }